feat: expose parental control capability
